pre wrap fix

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -467,6 +467,8 @@ body
     margin: 0;
     padding: 10px;
 
+    white-space: pre-wrap;
+
     border-radius: 4px;
     background: #41444e;
 
